Removed unnecessary padding and prevent whitespace wrap for the suggestion dropdown menu buttons.

--- a/client/src/scss/hangout.scss
+++ b/client/src/scss/hangout.scss
@@ -1331,10 +1331,10 @@
                 }
 
                 &-list {
-                  @apply absolute top-0 right-3 w-fit h-fit hidden z-3 rounded-sm overflow-hidden;
+                  @apply absolute top-0 right-3 w-fit h-fit hidden z-3 rounded-sm overflow-hidden whitespace-nowrap;
 
                   button {
-                    @apply block w-full p-1 pr-3 text-sm bg-description-dark dark:bg-description text-description dark:text-description-dark font-medium text-start cursor-pointer hover:brightness-75;
+                    @apply block w-full p-1 text-sm bg-description-dark dark:bg-description text-description dark:text-description-dark font-medium text-start cursor-pointer hover:brightness-75;
 
                     &:last-child {
                       @apply text-danger dark:text-danger-dark;
